--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
     "knockout": "^3.4.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5"
